c/examples/writing-a-c-compiler-tests/tests/chapter_3/valid/extra_credit/bitwise_xor.c
int main(void) {
    return 7 ^ 1;
}