c/examples/writing-a-c-compiler-tests/tests/chapter_3/invalid_parse/missing_second_op.c
int main(void) {
    return 1 + ;
}